@@ -19,19 +19,23 @@ context => parkedcalls          ; Which context parked calls are in (default par
 
 ;comebacktoorigin = yes         ; Setting this option configures the behavior of call parking when the
                                 ; parked call times out (See the parkingtime option).  The default value is 'yes'.
-                                ; Operates on all parking lots.
+                                ; Set per parking lot.
                                 ;
                                 ; 'yes' - When the parked call times out, attempt to send the call back to the peer
-                                ;         that parked this call.  This is done by saving off the name of the channel
-                                ;         that parked the call.
+                                ;         that parked this call. This is done by saving off the name of the channel
+                                ;         that parked the call. The call will return to the context 'park-dial' and
+                                ;         an extension created based on the name of the channel that originally parked
+                                ;         the call.  This extension will be created automatically to do a Dial() to the
+                                ;         device that originally parked the call for comebacktodialtime seconds. If the
+                                ;         call is not answered, the call will proceed to 'park-dial,t,1'.
                                 ;
                                 ; 'no'  - This option is useful for performing custom dialplan functionality prior to
                                 ;         sending the call back to the extension that initially parked the call, or to
                                 ;         an entirely different destination.
                                 ;
                                 ;         When the parked call times out, send it back to the dialplan.  The location
-                                ;         will be the 'parkedcallstimeout' context.  The extension will be built from
-                                ;         the saved channel name that parked the call.  For example, if a SIP peer named
+                                ;         will be defined by the comebackcontext option. The extension will be built from
+                                ;         the saved channel name that parked the call. For example, if a SIP peer named
                                 ;         '0004F2040001' parked this call, the extension will be 'SIP_0004F2040001'.
                                 ;         (Note that an underscore is used here because the '/' character has a special
                                 ;         meaning in extension names for CallerID matching.)  If this extension does not
@@ -46,6 +50,18 @@ context => parkedcalls          ; Which context parked calls are in (default par
                                 ;         During the timeout procedure, the following variables are set
                                 ;         PARKINGSLOT - extension that the call was parked in prior to timing out
                                 ;         PARKEDLOT - name of the lot that the call was parked in prior to timing out
+                                ;         PARKER - name of the device that parked the call
+
+;comebackdialtime = 30          ; When a parked call times out, this is the number of seconds to dial the device that
+                                ; originally parked the call.  It is also available as a channel variable COMEBACKDIALTIME
+                                ; after a parked call has timed out.
+                                ; The default value is 30 seconds.
+                                ; Set per parking lot.
+
+;comebackcontext = parkedcallstimeout
+                                ; The context a timed out call will return to if comebcktoorigin=no.
+                                ; The default value is 'parkedcallstimeout'.
+                                ; Set per parking lot.
 
 ;courtesytone = beep            ; Sound file to play to when someone picks up a parked call
                                 ; and also when the Touch Monitor is activated/deactivated.
@@ -113,6 +129,10 @@ context => parkedcalls          ; Which context parked calls are in (default par
 ;parkext => 799
 ;parkpos => 800-850
 ;findslot => next
+;comebacktoorigin = no
+;comebackdialtime = 90
+;comebackcontext = edvinapark-timeout ; Make sure you create the context!
+;parkedmusicclass = edvina
 
 ; Note that the DTMF features listed below only work when two channels have answered and are bridged together.
 ; They can not be used while the remote party is ringing or in progress. If you require this feature you can use
